adjustments to object detector, theory fixes, complete testdev run for base and ft

--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "97246"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,9 +324,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m attr_samples_df\u001b[39m.\u001b[39mto_pickle(\u001b[39m\"\u001b[39m\u001b[39m../data/finetuning/val_attr_samples_10k.pkl\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m rel_samples_df\u001b[39m.\u001b[39;49mto_pickle(\u001b[39m\"\u001b[39;49m\u001b[39m../data/finetuning/val_rel_samples_10k.pkl\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m~/.conda/envs/jhadl_tf/lib/python3.11/site-packages/pandas/core/generic.py:2955\u001b[0m, in \u001b[0;36mNDFrame.to_pickle\u001b[0;34m(self, path, compression, protocol, storage_options)\u001b[0m\n\u001b[1;32m   2903\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   2904\u001b[0m \u001b[39mPickle (serialize) object to file.\u001b[39;00m\n\u001b[1;32m   2905\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2951\u001b[0m \u001b[39m4    4    9\u001b[39;00m\n\u001b[1;32m   2952\u001b[0m \u001b[39m\"\"\"\u001b[39;00m  \u001b[39m# noqa: E501\u001b[39;00m\n\u001b[1;32m   2953\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpickle\u001b[39;00m \u001b[39mimport\u001b[39;00m to_pickle\n\u001b[0;32m-> 2955\u001b[0m to_pickle(\n\u001b[1;32m   2956\u001b[0m     \u001b[39mself\u001b[39;49m,\n\u001b[1;32m   2957\u001b[0m     path,\n\u001b[1;32m   2958\u001b[0m     compression\u001b[39m=\u001b[39;49mcompression,\n\u001b[1;32m   2959\u001b[0m     protocol\u001b[39m=\u001b[39;49mprotocol,\n\u001b[1;32m   2960\u001b[0m     storage_options\u001b[39m=\u001b[39;49mstorage_options,\n\u001b[1;32m   2961\u001b[0m )\n",
+      "File \u001b[0;32m~/.conda/envs/jhadl_tf/lib/python3.11/site-packages/pandas/io/pickle.py:103\u001b[0m, in \u001b[0;36mto_pickle\u001b[0;34m(obj, filepath_or_buffer, compression, protocol, storage_options)\u001b[0m\n\u001b[1;32m     93\u001b[0m     protocol \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mHIGHEST_PROTOCOL\n\u001b[1;32m     95\u001b[0m \u001b[39mwith\u001b[39;00m get_handle(\n\u001b[1;32m     96\u001b[0m     filepath_or_buffer,\n\u001b[1;32m     97\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    101\u001b[0m ) \u001b[39mas\u001b[39;00m handles:\n\u001b[1;32m    102\u001b[0m     \u001b[39m# letting pickle write directly to the buffer is more memory-efficient\u001b[39;00m\n\u001b[0;32m--> 103\u001b[0m     pickle\u001b[39m.\u001b[39;49mdump(obj, handles\u001b[39m.\u001b[39;49mhandle, protocol\u001b[39m=\u001b[39;49mprotocol)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "attr_samples_df.to_pickle(\"../data/finetuning/val_attr_samples_10k.pkl\")\n",
     "rel_samples_df.to_pickle(\"../data/finetuning/val_rel_samples_10k.pkl\")"
@@ -341,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,18 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Clean old model from cache\n",
     "if 'model' in locals() or 'model' in globals():\n",
@@ -377,7 +382,7 @@
     "torch.cuda.empty_cache()\n",
     "\n",
     "from model.clip_model import CLIPModel\n",
-    "model = CLIPModel(gpu, snapshot=\"model_snapshots/clip_finetune/checkpoint-66000\")\n",
+    "model = CLIPModel(gpu, model=\"openai/clip-vit-base-patch32\", snapshot=\"model_snapshots/clip_finetune/checkpoint-66000\")\n",
     "\n",
     "# from model.xvlm_itr_coco_model import XVLMModel\n",
     "# model = XVLMModel(gpu)"
@@ -454,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -555,57 +560,57 @@
      "output_type": "stream",
      "text": [
       "Evaluating prompt format 'a bad photo of a'\n",
-      "Accuracy: 67.929%\n",
-      "Precision: 0.727\n",
-      "Recall: 0.574\n",
-      "Evaluating prompt format 'a blurry photo of a'\n",
-      "Accuracy: 68.187%\n",
-      "Precision: 0.712\n",
-      "Recall: 0.611\n",
-      "Evaluating prompt format 'a pixelated photo of a'\n",
-      "Accuracy: 68.676%\n",
-      "Precision: 0.686\n",
-      "Recall: 0.690\n",
-      "Evaluating prompt format 'a low resolution photo of a'\n",
-      "Accuracy: 67.637%\n",
-      "Precision: 0.708\n",
-      "Recall: 0.600\n",
-      "Evaluating prompt format 'a photo of a'\n",
-      "Accuracy: 68.337%\n",
-      "Precision: 0.719\n",
-      "Recall: 0.603\n",
-      "Evaluating prompt format 'a'\n",
-      "Accuracy: 67.991%\n",
-      "Precision: 0.737\n",
-      "Recall: 0.560\n",
-      "Evaluating prompt format 'nothing'\n",
-      "Accuracy: 67.608%\n",
-      "Precision: 0.732\n",
-      "Recall: 0.555\n",
-      "Evaluating prompt format 'itap of a'\n",
-      "Accuracy: 67.725%\n",
-      "Precision: 0.702\n",
-      "Recall: 0.616\n",
-      "Evaluating prompt format 'a bad picture of a'\n",
-      "Accuracy: 67.830%\n",
+      "Accuracy: 67.863%\n",
       "Precision: 0.723\n",
-      "Recall: 0.578\n",
-      "Evaluating prompt format 'a blurry picture of a'\n",
-      "Accuracy: 68.064%\n",
-      "Precision: 0.710\n",
-      "Recall: 0.611\n",
-      "Evaluating prompt format 'a pixelated picture of a'\n",
-      "Accuracy: 68.825%\n",
-      "Precision: 0.683\n",
-      "Recall: 0.702\n",
-      "Evaluating prompt format 'a low resolution picture of a'\n",
-      "Accuracy: 67.783%\n",
+      "Recall: 0.579\n",
+      "Evaluating prompt format 'a blurry photo of a'\n",
+      "Accuracy: 67.951%\n",
+      "Precision: 0.707\n",
+      "Recall: 0.614\n",
+      "Evaluating prompt format 'a pixelated photo of a'\n",
+      "Accuracy: 68.742%\n",
+      "Precision: 0.685\n",
+      "Recall: 0.693\n",
+      "Evaluating prompt format 'a low resolution photo of a'\n",
+      "Accuracy: 67.736%\n",
       "Precision: 0.708\n",
-      "Recall: 0.606\n",
-      "Evaluating prompt format 'a picture of a'\n",
-      "Accuracy: 68.829%\n",
+      "Recall: 0.604\n",
+      "Evaluating prompt format 'a photo of a'\n",
+      "Accuracy: 68.046%\n",
       "Precision: 0.712\n",
-      "Recall: 0.631\n"
+      "Recall: 0.606\n",
+      "Evaluating prompt format 'a'\n",
+      "Accuracy: 68.162%\n",
+      "Precision: 0.739\n",
+      "Recall: 0.562\n",
+      "Evaluating prompt format 'nothing'\n",
+      "Accuracy: 67.696%\n",
+      "Precision: 0.733\n",
+      "Recall: 0.557\n",
+      "Evaluating prompt format 'itap of a'\n",
+      "Accuracy: 67.871%\n",
+      "Precision: 0.703\n",
+      "Recall: 0.619\n",
+      "Evaluating prompt format 'a bad picture of a'\n",
+      "Accuracy: 67.732%\n",
+      "Precision: 0.720\n",
+      "Recall: 0.581\n",
+      "Evaluating prompt format 'a blurry picture of a'\n",
+      "Accuracy: 67.896%\n",
+      "Precision: 0.705\n",
+      "Recall: 0.615\n",
+      "Evaluating prompt format 'a pixelated picture of a'\n",
+      "Accuracy: 68.953%\n",
+      "Precision: 0.684\n",
+      "Recall: 0.705\n",
+      "Evaluating prompt format 'a low resolution picture of a'\n",
+      "Accuracy: 67.812%\n",
+      "Precision: 0.706\n",
+      "Recall: 0.610\n",
+      "Evaluating prompt format 'a picture of a'\n",
+      "Accuracy: 68.614%\n",
+      "Precision: 0.707\n",
+      "Recall: 0.635\n"
      ]
     }
    ],
@@ -618,14 +623,14 @@
     "attr_results = {}\n",
     "for key, dataset in attr_datasets.items():\n",
     "    print(f\"Evaluating prompt format '{key}'\")\n",
-    "    attr_evaluator = Evaluator(model, dataset, batch_size=128)\n",
+    "    attr_evaluator = Evaluator(model, dataset, batch_size=256)\n",
     "    results = attr_evaluator.evaluate()\n",
     "    attr_results[key] = results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -643,19 +648,19 @@
      "text": [
       "\\begin{tabular}{lrrr}\n",
       "schema & accuracy & precision & recall \\\\\n",
-      "a bad photo of a & 0.6583 & 0.6728 & 0.6165 \\\\\n",
-      "a blurry photo of a & 0.6590 & 0.6620 & 0.6495 \\\\\n",
-      "a pixelated photo of a & 0.6512 & 0.6492 & 0.6577 \\\\\n",
-      "a low resolution photo of a & 0.6555 & 0.6572 & 0.6499 \\\\\n",
-      "a photo of a & 0.6522 & 0.6621 & 0.6215 \\\\\n",
-      "a & 0.6533 & 0.6650 & 0.6178 \\\\\n",
-      "nothing & 0.6465 & 0.6776 & 0.5591 \\\\\n",
-      "itap of a & 0.6529 & 0.6741 & 0.5918 \\\\\n",
-      "a bad picture of a & 0.6561 & 0.6673 & 0.6227 \\\\\n",
-      "a blurry picture of a & 0.6549 & 0.6564 & 0.6501 \\\\\n",
-      "a pixelated picture of a & 0.6551 & 0.6518 & 0.6660 \\\\\n",
-      "a low resolution picture of a & 0.6571 & 0.6593 & 0.6502 \\\\\n",
-      "a picture of a & 0.6560 & 0.6568 & 0.6534 \\\\\n",
+      "a bad photo of a & 67.8634 & 0.7232 & 0.5787 \\\\\n",
+      "a blurry photo of a & 67.9509 & 0.7066 & 0.6139 \\\\\n",
+      "a pixelated photo of a & 68.7418 & 0.6855 & 0.6927 \\\\\n",
+      "a low resolution photo of a & 67.7358 & 0.7079 & 0.6040 \\\\\n",
+      "a photo of a & 68.0456 & 0.7120 & 0.6060 \\\\\n",
+      "a & 68.1623 & 0.7390 & 0.5615 \\\\\n",
+      "nothing & 67.6957 & 0.7326 & 0.5573 \\\\\n",
+      "itap of a & 67.8707 & 0.7031 & 0.6187 \\\\\n",
+      "a bad picture of a & 67.7322 & 0.7197 & 0.5809 \\\\\n",
+      "a blurry picture of a & 67.8962 & 0.7052 & 0.6150 \\\\\n",
+      "a pixelated picture of a & 68.9532 & 0.6839 & 0.7048 \\\\\n",
+      "a low resolution picture of a & 67.8124 & 0.7064 & 0.6096 \\\\\n",
+      "a picture of a & 68.6142 & 0.7074 & 0.6349 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
@@ -665,12 +670,13 @@
     "import pandas as pd\n",
     "\n",
     "attr_results_pd = pd.DataFrame(attr_results1)\n",
-    "attr_results_pd[\"accuracy\"] = attr_results_pd[\"accuracy\"]/100\n",
+    "# attr_results_pd = pd.read_pickle(\"prompt_engineering_results/attributes_base_patch32.pkl\")\n",
+    "# attr_results_pd.to_pickle(\"prompt_engineering_results/attributes_large_patch14.pkl\")\n",
+    "attr_results_pd[\"accuracy\"] = attr_results_pd[\"accuracy\"]\n",
     "\n",
     "attr_results_pd = attr_results_pd.style.format(precision=4).hide(axis=\"index\")\n",
     "print(attr_results_pd.to_latex())\n",
-    "\n",
-    "#attr_results_pd.to_pickle(\"prompt_engineering_results/attributes.pkl\")"
+    "\n"
    ]
   },
   {
@@ -682,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -762,61 +768,63 @@
      "output_type": "stream",
      "text": [
       "Evaluating prompt format 'a bad photo of a'\n",
-      "Accuracy: 54.688%\n",
-      "Precision: 0.538\n",
-      "Recall: 0.657\n",
+      "Accuracy: 58.311%\n",
+      "Precision: 0.568\n",
+      "Recall: 0.695\n",
       "Evaluating prompt format 'a blurry photo of a'\n",
-      "Accuracy: 53.798%\n",
-      "Precision: 0.529\n",
-      "Recall: 0.694\n",
+      "Accuracy: 57.640%\n",
+      "Precision: 0.559\n",
+      "Recall: 0.729\n",
       "Evaluating prompt format 'a pixelated photo of a'\n",
-      "Accuracy: 55.334%\n",
-      "Precision: 0.549\n",
-      "Recall: 0.592\n",
+      "Accuracy: 59.287%\n",
+      "Precision: 0.588\n",
+      "Recall: 0.619\n",
       "Evaluating prompt format 'a low resolution photo of a'\n",
-      "Accuracy: 54.822%\n",
-      "Precision: 0.548\n",
-      "Recall: 0.554\n",
+      "Accuracy: 57.749%\n",
+      "Precision: 0.577\n",
+      "Recall: 0.581\n",
       "Evaluating prompt format 'a photo of a'\n",
-      "Accuracy: 55.444%\n",
-      "Precision: 0.543\n",
-      "Recall: 0.688\n",
+      "Accuracy: 58.462%\n",
+      "Precision: 0.570\n",
+      "Recall: 0.690\n",
       "Evaluating prompt format 'a'\n",
-      "Accuracy: 54.933%\n",
-      "Precision: 0.537\n",
-      "Recall: 0.721\n",
+      "Accuracy: 59.840%\n",
+      "Precision: 0.578\n",
+      "Recall: 0.733\n",
       "Evaluating prompt format 'nothing'\n",
-      "Accuracy: 56.321%\n",
-      "Precision: 0.553\n",
-      "Recall: 0.659\n",
+      "Accuracy: 59.250%\n",
+      "Precision: 0.578\n",
+      "Recall: 0.688\n",
       "Evaluating prompt format 'itap of a'\n",
-      "Accuracy: 54.148%\n",
-      "Precision: 0.540\n",
-      "Recall: 0.556\n",
+      "Accuracy: 57.039%\n",
+      "Precision: 0.561\n",
+      "Recall: 0.648\n",
       "Evaluating prompt format 'a bad picture of a'\n",
-      "Accuracy: 54.310%\n",
-      "Precision: 0.536\n",
-      "Recall: 0.643\n",
+      "Accuracy: 58.393%\n",
+      "Precision: 0.570\n",
+      "Recall: 0.683\n",
       "Evaluating prompt format 'a blurry picture of a'\n",
-      "Accuracy: 53.951%\n",
-      "Precision: 0.532\n",
-      "Recall: 0.666\n",
+      "Accuracy: 58.085%\n",
+      "Precision: 0.566\n",
+      "Recall: 0.695\n",
       "Evaluating prompt format 'a pixelated picture of a'\n",
-      "Accuracy: 55.240%\n",
-      "Precision: 0.549\n",
-      "Recall: 0.583\n",
+      "Accuracy: 59.596%\n",
+      "Precision: 0.593\n",
+      "Recall: 0.614\n",
       "Evaluating prompt format 'a low resolution picture of a'\n",
-      "Accuracy: 54.994%\n",
-      "Precision: 0.550\n",
-      "Recall: 0.554\n",
+      "Accuracy: 57.998%\n",
+      "Precision: 0.585\n",
+      "Recall: 0.552\n",
       "Evaluating prompt format 'a picture of a'\n",
-      "Accuracy: 55.826%\n",
-      "Precision: 0.547\n",
-      "Recall: 0.680\n"
+      "Accuracy: 59.439%\n",
+      "Precision: 0.582\n",
+      "Recall: 0.667\n"
      ]
     }
    ],
    "source": [
+    "import reload_recursive\n",
+    "\n",
     "%reload evaluator\n",
     "from evaluator import Evaluator\n",
     "\n",
@@ -830,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -839,19 +847,19 @@
      "text": [
       "\\begin{tabular}{lrrr}\n",
       "schema & accuracy & precision & recall \\\\\n",
-      "a bad photo of a & 0.5469 & 0.5384 & 0.6569 \\\\\n",
-      "a blurry photo of a & 0.5380 & 0.5290 & 0.6939 \\\\\n",
-      "a pixelated photo of a & 0.5533 & 0.5495 & 0.5922 \\\\\n",
-      "a low resolution photo of a & 0.5482 & 0.5476 & 0.5542 \\\\\n",
-      "a photo of a & 0.5544 & 0.5430 & 0.6880 \\\\\n",
-      "a & 0.5493 & 0.5367 & 0.7213 \\\\\n",
-      "nothing & 0.5632 & 0.5530 & 0.6590 \\\\\n",
-      "itap of a & 0.5415 & 0.5403 & 0.5562 \\\\\n",
-      "a bad picture of a & 0.5431 & 0.5359 & 0.6429 \\\\\n",
-      "a blurry picture of a & 0.5395 & 0.5316 & 0.6656 \\\\\n",
-      "a pixelated picture of a & 0.5524 & 0.5493 & 0.5834 \\\\\n",
-      "a low resolution picture of a & 0.5499 & 0.5495 & 0.5541 \\\\\n",
-      "a picture of a & 0.5583 & 0.5469 & 0.6799 \\\\\n",
+      "a bad photo of a & 0.5831 & 0.5679 & 0.6950 \\\\\n",
+      "a blurry photo of a & 0.5764 & 0.5586 & 0.7286 \\\\\n",
+      "a pixelated photo of a & 0.5929 & 0.5882 & 0.6193 \\\\\n",
+      "a low resolution photo of a & 0.5775 & 0.5770 & 0.5805 \\\\\n",
+      "a photo of a & 0.5846 & 0.5699 & 0.6901 \\\\\n",
+      "a & 0.5984 & 0.5775 & 0.7331 \\\\\n",
+      "nothing & 0.5925 & 0.5777 & 0.6880 \\\\\n",
+      "itap of a & 0.5704 & 0.5610 & 0.6475 \\\\\n",
+      "a bad picture of a & 0.5839 & 0.5700 & 0.6834 \\\\\n",
+      "a blurry picture of a & 0.5808 & 0.5658 & 0.6954 \\\\\n",
+      "a pixelated picture of a & 0.5960 & 0.5926 & 0.6139 \\\\\n",
+      "a low resolution picture of a & 0.5800 & 0.5847 & 0.5524 \\\\\n",
+      "a picture of a & 0.5944 & 0.5824 & 0.6672 \\\\\n",
       "\\end{tabular}\n",
       "\n"
      ]
