changed proximity relation approach, added testdev run

--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "486d65e6e4524b0fae86f7e6d9f5fd07",
+       "model_id": "60882b1287fa4d7fa5e3600a88cc3f36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,12 +207,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step     200: Corr      93, Incorr      98, UNSAT       1, Skip     9, Corr %: 48.6911%\n",
-      "Step     400: Corr     179, Incorr     208, UNSAT       1, Skip    13, Corr %: 46.2532%\n",
-      "Step     600: Corr     275, Incorr     304, UNSAT       4, Skip    21, Corr %: 47.4957%\n",
-      "Step     800: Corr     367, Incorr     402, UNSAT       4, Skip    31, Corr %: 47.7243%\n",
-      "Step    1000: Corr     458, Incorr     503, UNSAT       5, Skip    39, Corr %: 47.6587%\n",
-      "Step    1000: Corr     458, Incorr     503, UNSAT       5, Skip    39, Corr %: 47.6587%\n"
+      "Step   10800: Corr    4317, Incorr    6342, UNSAT     376, Skip   141, Corr %: 40.5010%\n",
+      "Step   11000: Corr    4403, Incorr    6453, UNSAT     382, Skip   144, Corr %: 40.5582%\n",
+      "Step   11200: Corr    4486, Incorr    6570, UNSAT     388, Skip   144, Corr %: 40.5753%\n",
+      "Step   11400: Corr    4561, Incorr    6694, UNSAT     390, Skip   145, Corr %: 40.5242%\n",
+      "Step   11600: Corr    4650, Incorr    6804, UNSAT     399, Skip   146, Corr %: 40.5972%\n",
+      "Step   11800: Corr    4736, Incorr    6914, UNSAT     405, Skip   150, Corr %: 40.6524%\n",
+      "Step   12000: Corr    4813, Incorr    7035, UNSAT     414, Skip   152, Corr %: 40.6229%\n",
+      "Step   12200: Corr    4897, Incorr    7147, UNSAT     422, Skip   156, Corr %: 40.6592%\n",
+      "Step   12400: Corr    4973, Incorr    7271, UNSAT     428, Skip   156, Corr %: 40.6158%\n",
+      "Step   12578: Corr    5037, Incorr    7384, UNSAT     435, Skip   157, Corr %: 40.5523%\n"
      ]
     }
    ],
@@ -231,7 +235,7 @@
     "history = []\n",
     "last_step = -1\n",
     "snapshot_steps = 200\n",
-    "snapshot_dir = \"evaluations/val_1000\"\n",
+    "snapshot_dir = \"evaluations/testdev_sr_clipbase_owllarge\"\n",
     "\n",
     "if not os.path.exists(snapshot_dir):\n",
     "    os.mkdir(snapshot_dir)\n",
@@ -273,6 +277,13 @@
     "\n",
     "report_results(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
