made attribute and class metadata externally loadable

--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -97,6 +97,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import itertools\n",
+    "\n",
+    "with open('../data/metadata/gqa_all_attribute.json') as f:\n",
+    "    all_attributes = json.load(f)\n",
+    "\n",
+    "with open('../data/metadata/gqa_all_class.json') as f:\n",
+    "    all_classes = json.load(f)\n",
+    "    all_child_classes = [c.replace(\"_\", \" \") for c in itertools.chain(*all_classes.values())]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -155,7 +172,7 @@
     "        ctl = Control()\n",
     "        ctl.add(asp_theory)\n",
     "\n",
-    "        scene_encoding = encode_scene(question, model, object_detector)\n",
+    "        scene_encoding = encode_scene(question, model, object_detector, all_classes, all_child_classes, all_attributes, \"../data/images\")\n",
     "        question_encoding = encode_question(question)\n",
     "\n",
     "        with open(f\"../data/encoded_questions/{qid}.lp\", \"w\") as f:\n",
