added evaluation of answer similarity

--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "%reload model.clip_model\n",
     "from model.clip_model import CLIPModel\n",
-    "model = CLIPModel(gpu, model=\"openai/clip-vit-base-patch32\", snapshot=\"model_snapshots/clip_finetune/checkpoint-66000\")"
+    "model = CLIPModel(gpu, model=\"openai/clip-vit-base-patch32\")"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "source": [
     "import json \n",
     "\n",
-    "with open(\"../data/questions/testdev_balanced_questions.json\") as f:\n",
+    "with open(\"../data/questions/val_sampled_questions_10000.json\") as f:\n",
     "   questions = list(json.load(f).items())"
    ]
   },
@@ -192,12 +192,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "767586dc551848c9904d040074f67ac9",
+       "model_id": "486d65e6e4524b0fae86f7e6d9f5fd07",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Questions:   0%|          | 0/12578 [00:00<?, ?it/s]"
+       "Questions:   0%|          | 0/1000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -207,45 +207,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step    2200: Corr     881, Incorr    1292, UNSAT      63, Skip    27, Corr %: 40.5430%\n",
-      "Step    2400: Corr     954, Incorr    1419, UNSAT      79, Skip    27, Corr %: 40.2023%\n",
-      "Step    2600: Corr    1035, Incorr    1535, UNSAT      89, Skip    30, Corr %: 40.2724%\n",
-      "Step    2800: Corr    1128, Incorr    1642, UNSAT      96, Skip    30, Corr %: 40.7220%\n",
-      "Step    3000: Corr    1208, Incorr    1761, UNSAT     102, Skip    31, Corr %: 40.6871%\n",
-      "Step    3200: Corr    1280, Incorr    1886, UNSAT     110, Skip    34, Corr %: 40.4296%\n",
-      "Step    3400: Corr    1354, Incorr    2010, UNSAT     120, Skip    36, Corr %: 40.2497%\n",
-      "Step    3600: Corr    1435, Incorr    2129, UNSAT     124, Skip    36, Corr %: 40.2637%\n",
-      "Step    3800: Corr    1517, Incorr    2243, UNSAT     131, Skip    40, Corr %: 40.3457%\n",
-      "Step    4000: Corr    1603, Incorr    2355, UNSAT     139, Skip    42, Corr %: 40.5003%\n",
-      "Step    4200: Corr    1692, Incorr    2463, UNSAT     147, Skip    45, Corr %: 40.7220%\n",
-      "Step    4400: Corr    1777, Incorr    2576, UNSAT     154, Skip    47, Corr %: 40.8224%\n",
-      "Step    4600: Corr    1862, Incorr    2683, UNSAT     160, Skip    55, Corr %: 40.9681%\n",
-      "Step    4800: Corr    1942, Incorr    2801, UNSAT     170, Skip    57, Corr %: 40.9445%\n",
-      "Step    5000: Corr    2033, Incorr    2906, UNSAT     176, Skip    61, Corr %: 41.1622%\n",
-      "Step    5200: Corr    2119, Incorr    3018, UNSAT     183, Skip    63, Corr %: 41.2498%\n",
-      "Step    5400: Corr    2206, Incorr    3130, UNSAT     189, Skip    64, Corr %: 41.3418%\n",
-      "Step    5600: Corr    2294, Incorr    3237, UNSAT     199, Skip    69, Corr %: 41.4753%\n",
-      "Step    5800: Corr    2378, Incorr    3351, UNSAT     207, Skip    71, Corr %: 41.5081%\n",
-      "Step    6000: Corr    2459, Incorr    3462, UNSAT     209, Skip    79, Corr %: 41.5301%\n",
-      "Step    6200: Corr    2554, Incorr    3567, UNSAT     218, Skip    79, Corr %: 41.7252%\n",
-      "Step    6400: Corr    2634, Incorr    3685, UNSAT     224, Skip    81, Corr %: 41.6838%\n",
-      "Step    6600: Corr    2716, Incorr    3801, UNSAT     230, Skip    83, Corr %: 41.6756%\n",
-      "Step    6800: Corr    2809, Incorr    3907, UNSAT     235, Skip    84, Corr %: 41.8255%\n",
-      "Step    7000: Corr    2891, Incorr    4022, UNSAT     245, Skip    87, Corr %: 41.8198%\n",
-      "Step    7200: Corr    2983, Incorr    4125, UNSAT     248, Skip    92, Corr %: 41.9668%\n",
-      "Step    7400: Corr    3066, Incorr    4240, UNSAT     253, Skip    94, Corr %: 41.9655%\n",
-      "Step    7600: Corr    3151, Incorr    4351, UNSAT     257, Skip    98, Corr %: 42.0021%\n",
-      "Step    7800: Corr    3215, Incorr    4483, UNSAT     260, Skip   102, Corr %: 41.7641%\n",
-      "Step    8000: Corr    3301, Incorr    4592, UNSAT     265, Skip   107, Corr %: 41.8219%\n",
-      "Step    8200: Corr    3381, Incorr    4707, UNSAT     273, Skip   112, Corr %: 41.8027%\n",
-      "Step    8400: Corr    3448, Incorr    4839, UNSAT     281, Skip   113, Corr %: 41.6073%\n",
-      "Step    8600: Corr    3531, Incorr    4954, UNSAT     286, Skip   115, Corr %: 41.6146%\n",
-      "Step    8800: Corr    3617, Incorr    5066, UNSAT     295, Skip   117, Corr %: 41.6561%\n",
-      "Step    9000: Corr    3706, Incorr    5173, UNSAT     303, Skip   121, Corr %: 41.7389%\n",
-      "Step    9200: Corr    3793, Incorr    5286, UNSAT     308, Skip   121, Corr %: 41.7777%\n",
-      "Step    9400: Corr    3880, Incorr    5396, UNSAT     319, Skip   124, Corr %: 41.8284%\n",
-      "Step    9600: Corr    3963, Incorr    5511, UNSAT     327, Skip   126, Corr %: 41.8303%\n",
-      "Step    9800: Corr    4036, Incorr    5635, UNSAT     331, Skip   129, Corr %: 41.7330%\n"
+      "Step     200: Corr      93, Incorr      98, UNSAT       1, Skip     9, Corr %: 48.6911%\n",
+      "Step     400: Corr     179, Incorr     208, UNSAT       1, Skip    13, Corr %: 46.2532%\n",
+      "Step     600: Corr     275, Incorr     304, UNSAT       4, Skip    21, Corr %: 47.4957%\n",
+      "Step     800: Corr     367, Incorr     402, UNSAT       4, Skip    31, Corr %: 47.7243%\n",
+      "Step    1000: Corr     458, Incorr     503, UNSAT       5, Skip    39, Corr %: 47.6587%\n",
+      "Step    1000: Corr     458, Incorr     503, UNSAT       5, Skip    39, Corr %: 47.6587%\n"
      ]
     }
    ],
@@ -259,12 +226,12 @@
     "with open(\"../src/pipeline/encoding/theory.lp\") as theory_file:\n",
     "    theory = theory_file.read()\n",
     "\n",
-    "num_questions = len(questions)\n",
+    "num_questions = 1000\n",
     "results = []\n",
     "history = []\n",
     "last_step = -1\n",
     "snapshot_steps = 200\n",
-    "snapshot_dir = \"evaluations/testdev_tuned_clipbase_owllarge2\"\n",
+    "snapshot_dir = \"evaluations/val_1000\"\n",
     "\n",
     "if not os.path.exists(snapshot_dir):\n",
     "    os.mkdir(snapshot_dir)\n",
